--- a/register.html
+++ b/register.html
@@ -15,6 +15,7 @@
         @font-face {
             font-family: LINESeedSansTH;
             src: url(https://seed.line.me/src/fonts/LINESeedSansTH_W_Th.woff) format('woff'),
+                url(https://seed.line.me/src/fonts/LINESeedSansTH_W_Th.woff2) format('woff2');
             font-weight: 100;
             font-style: normal;
         }
@@ -22,6 +23,7 @@
         @font-face {
             font-family: LINESeedSansTH;
             src: url(https://seed.line.me/src/fonts/LINESeedSansTH_W_Rg.woff) format('woff'),
+                url(https://seed.line.me/src/fonts/LINESeedSansTH_W_Rg.woff2) format('woff2');
             font-weight: 300;
             font-style: normal;
         }
@@ -29,6 +31,7 @@
         @font-face {
             font-family: LINESeedSansTH;
             src: url(https://seed.line.me/src/fonts/LINESeedSansTH_W_Bd.woff) format('woff'),
+                url(https://seed.line.me/src/fonts/LINESeedSansTH_W_Bd.woff2) format('woff2');
             font-weight: 600;
             font-style: normal;
         }
@@ -36,6 +39,7 @@
         @font-face {
             font-family: LINESeedSansTH;
             src: url(https://seed.line.me/src/fonts/LINESeedSansTH_W_He.woff) format('woff'),
+                url(https://seed.line.me/src/fonts/LINESeedSansTH_W_He.woff2) format('woff2');
             font-weight: 700;
             font-style: normal;
         }
@@ -43,6 +47,7 @@
         @font-face {
             font-family: LINESeedSansTH;
             src: url(https://seed.line.me/src/fonts/LINESeedSansTH_W_XBd.woff) format('woff'),
+                url(https://seed.line.me/src/fonts/LINESeedSansTH_W_XBd.woff2) format('woff2');
             font-weight: 800;
             font-style: normal;
         }
@@ -271,7 +276,7 @@
             font-family: 'LINE Seed Sans TH', sans-serif;
             font-size: 16px;
             transition: border-color 0.3s, box-shadow 0.3s;
-            
+
         }
 
         select {
@@ -437,12 +442,10 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background: linear-gradient(
-                120deg,
-                transparent,
-                rgba(255, 255, 255, 0.3),
-                transparent
-            );
+            background: linear-gradient(120deg,
+                    transparent,
+                    rgba(255, 255, 255, 0.3),
+                    transparent);
             transition: 0.5s;
         }
 
@@ -490,6 +493,7 @@
             from {
                 transform: rotate(0turn);
             }
+
             to {
                 transform: rotate(1turn);
             }
@@ -1391,7 +1395,7 @@
 
                 <div class="payment-info" style="text-align: center;">
                     <p>โอนเงินผ่านบัญชีธนาคารกรุงไทย สาขาเทสโก้โลตัสยโสธร</p>
-                    <p style="font-size: 25px; color: var(--primary); font-weight: 700;">เลขที่บัญชี: 865-0-69605-8</p>
+                    <p style="font-size: 20px; color: var(--primary); font-weight: 700;">เลขที่บัญชี: 865-0-69605-8</p>
                     <p>ชื่อบัญชี: YSP. RUN WITH ME 3nd</p>
                 </div>
 
@@ -1617,6 +1621,11 @@
                 </div>
             </div>
 
+            <div class="info-box" style="margin: 20px 0; border: 2px solid #FBC02D;">
+                <p style="color: #FBC02D;"><i class="fas fa-info-circle" style="margin-right: 0.2rem;"></i> <strong style="font-size: 18px;">หมายเหตุ:</strong></p>
+                <p style="margin-top: 10px;">การยืนยันการลงทะเบียนดังกล่าวถือเป็นการให้ความยินยอมในการทำธุรกรรมทางอิเล็กทรอนิกส์ตามที่กำหนดไว้ในพระราชบัญญัติว่าด้วยธุรกรรมทางอิเล็กทรอนิกส์ พ.ศ.๒๕๔๔ และถือเป็นการที่ผู้ลงทะเบียนได้ให้การยอมรับข้อกำหนดและเงื่อนไขของการให้บริการโดยสมบูรณ์แล้ว</p>
+            </div>
+
             <div style="text-align: center;">
                 <button class="btn-4" type="submit">
                     <i class="fas fa-paper-plane"></i>&nbsp;
@@ -1770,8 +1779,13 @@
         }
 
         @keyframes expandLine {
-            from { width: 0; }
-            to { width: 100%; }
+            from {
+                width: 0;
+            }
+
+            to {
+                width: 100%;
+            }
         }
 
         .footer-copyright {
