--- a/register.html
+++ b/register.html
@@ -1929,7 +1929,7 @@
                             <i class="fas fa-headset"></i>
                         </div>
                         <div>
-                            <p>ฝ่ายประสานงาน: 098-XXX-XXXX</p>
+                            <p>ฝ่ายประสานงาน: </p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -1937,7 +1937,7 @@
                             <i class="fas fa-running"></i>
                         </div>
                         <div>
-                            <p>ฝ่ายจัดการแข่งขัน: 064-XXX-XXXX</p>
+                            <p>ฝ่ายจัดการแข่งขัน: </p>
                         </div>
                     </div>
                 </div>
