--- a/register.html
+++ b/register.html
@@ -15,6 +15,13 @@
         /* --- Font Definitions --- */
         /* Keep the custom font definitions as they are already set up */
         @font-face {
+      font-family: 'LINE Seed Sans TH';
+      src: url('https://github.com/ysptobe/rwm-3.github.io/blob/894fbdc2f9e41cd25fb02073519bad7a8d5c8a1c/LINE_Seed_Sans_TH_V1.003/Web/WOFF/LINESeedSansTH_W_Rg.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+    }
+        
+        @font-face {
             font-family: LINESeedSansTH;
             src: url(https://seed.line.me/src/fonts/LINESeedSansTH_W_Th.woff) format('woff'),
             font-weight: 100;
