--- a/register.html
+++ b/register.html
@@ -85,7 +85,7 @@
         }
 
         body {
-            font-family: 'LINE Seed Sans TH', "Sarabun", sans-serif;
+            font-family: 'LINE Seed Sans TH', 'Sarabun', sans-serif;
             font-weight: 300;
             color: var(--text-dark);
             background-color: #F5F7FA;
